<resources>
    <string name="app_name">AndroidBackend</string>
    <string name="addButton">Add User</string>
    <string name="textViewUsername">Username</string>
    <string name="editTextUsername"></string>
    <string name="textViewPassword">Password</string>
    <string name="editTextPassword"></string>
    <string name="buttonAddUser">Add User</string>
    <string name="textViewUsernameLogging">Username</string>
    <string name="editTextUsernameLogging"></string>
    <string name="textViewPasswordLogging">Password</string>
    <string name="editTextPasswordLogging"></string>
    <string name="loginButton">Log In</string>
    <string name="textViewAddingUser">ADDING USER</string>
    <string name="textViewLogging">LOGGING</string>
    <string name="tvAddingDishCategory">ADDING DISH CATEGORY</string>
    <string name="tvDishCategoryName">Dish category name</string>
    <string name="eTDishCategoryName"></string>
    <string name="buttonAddDishCategory">Add new dish category</string>
    <string name="addDishCategoryButton">Add new dish category</string>
    <string name="tVGetDishCategories">GET ALL DISH CATEGORIES</string>
    <string name="tVCategoriesList"></string>
    <string name="getDishCategories">Get Dish Categories</string>
    <string name="getDishCategoriesButtonText">Button</string>
    <string name="textViewRole">Role</string>
    <string name="adminButton">ADMIN</string>
    <string name="adminViewText">ADMIN VIEW</string>
    <string name="dieticianButton">DIETICIAN</string>
    <string name="addNewDishText">ADD NEW DISH</string>
    <string name="addingNewDishText">ADDING NEW DISH</string>
    <string name="showAllDishesText">SHOW ALL DISHES</string>
    <string name="showAllDishCategoriesText">SHOW ALL DISH CATEGORIES</string>
    <string name="getAllDishCategoriesText">ALL DISH CATEGORIES</string>
    <string name="getAllDishesText">ALL DISHES</string>
    <string name="dishNameTextView">Dish name</string>
    <string name="eTDishName" />
    <string name="addDishButtonText">ADD DISH</string>
    <string name="addDishToDBText">ADD DISH</string>
    <string name="dieticianViewText">DIETICIAN VIEW</string>
    <string name="dishPriceTV">Price</string>
    <string name="eTDishPrice" />
    <string name="eTEstimatedPrepTime" />
    <string name="tVEstimatedPrepTime">Estimate preparation time</string>
    <string name="tVDishCategoryId">Dish category id</string>
    <string name="eTDishCategoryId" />
    <string name="wait">WAIT</string>
    <string name="tVDishCategoryName">Dish category name</string>
    <string name="tVChooseDishCategory">Choose dish category</string>
    <string name="buttonShowDishesWithCategory">SHOW</string>
    <string name="waiterButtonText">WAITER</string>
    <string name="tVWaiterView">WAITER VIEW</string>
    <string name="showPreparedOrdersButtonText">SHOW PREPARED ORDERS</string>
    <string name="tVPreparedOrdersText">ORDERS READY TO DELIVER</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_home">Notes</string>
    <string name="msg_no_dishes">No dishes found!</string>
    <string name="lbl_yes_order_dish">Yes</string>
    <string name="hint_enter_note">Enter your note!</string>
    <string name="appbar_scrolling_view_behavior">scrolling view</string>
    <string name="lbl_dont_order_dish">No</string>
    <string name="buttonDeliverOrderText">DELIVER ORDER</string>
    <string name="tVChefViewText">CHEF VIEW</string>
    <string name="buttonCheckOrdersText">CHECK ORDERS</string>
    <string name="tVOrdersToPrepareText">ORDERS TO PREPARE</string>
    <string name="chefButtonText">CHEF</string>
    <string name="buttonPrepareOrderText">PREPARE ORDER</string>
    <string name="buttonCustomerText">CUSTOMER</string>
    <string name="buttonMakeOrderText">MAKE ORDER</string>
    <string name="tVDishesListText">ALL DISHES LIST</string>
    <string name="buttonAddOrderText">CONFIRM ORDER</string>
    <string name="tVCustomerViewText">CUSTOMER VIEW</string>
    <string name="tVTypeDishNumberText">Type id of dish you want to order:</string>
    <string name="buttonAddDishToOrderText">ADD TO ORDER</string>
    <string name="tVChosenDishesTitleText">YOUR CHOSEN DISH</string>
    <string name="buttonOpenMakeOrderText">MAKE ORDER</string>
    <string name="tVTableNumberText">Type your table number here:</string>
    <string name="tVOrderToPrepareIdText">Type id of order to prepare</string>
    <string name="buttonRefreshListText">REFRESH LIST</string>
    <string name="buttonRefreshOrdersToDeliverText">REFRESH LIST</string>
    <string name="make_dish_order_button_text">MAKE DISH ORDER</string>
    <string name="test">TEST</string>
    <string name="dishes_toolbar_text">DISHES</string>
</resources>
