<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".activities.AddUserActivity">

    <TextView
        android:id="@+id/textViewLogging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewLogging"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewUsernameLogging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewUsernameLogging" />

    <EditText
        android:id="@+id/editTextUsernameLogging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editTextUsernameLogging" />

    <TextView
        android:id="@+id/textViewPasswordLogging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewPasswordLogging" />

    <EditText
        android:id="@+id/editTextPasswordLogging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName|textPassword"
        android:text="@string/editTextPasswordLogging" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginButton" />

</LinearLayout>