<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.GetDishCategoriesActivity">

    <TextView
        android:id="@+id/textViewGetDishCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tVGetDishCategories" />

    <TextView
        android:id="@+id/tVTextViewCategoriesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tVCategoriesList" />

    <Button
        android:id="@+id/getDishCategoriesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/getDishCategoriesButtonText" />
</LinearLayout>