<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.MakeOrderActivity">

        <TextView
            android:id="@+id/tVTypeTableNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tVTableNumberText" />

        <EditText
            android:id="@+id/eTTableNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="" />

        <TextView
            android:id="@+id/tVTypeDishNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tVTypeDishNumberText" />

        <EditText
            android:id="@+id/eTDishToOrderNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="" />

        <Button
            android:id="@+id/buttonAddDishToOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAddDishToOrderText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tVChosenDishesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tVChosenDishesTitleText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tVChosenDishes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <Button
            android:id="@+id/addOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAddOrderText"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>