<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activities.MainActivity"
    android:textSize="30sp"
    android:textStyle="bold"
    android:gravity="center"
    android:background="@color/backgroundColor"
    android:textColor="@color/buttonTextColor">

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="CHOOSE YOUR ROLE:"/>

    <Button
        android:id="@+id/adminButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@color/buttonColor"
        android:textColor="@color/buttonTextColor"
        android:text="@string/adminButton" />

    <Button
        android:id="@+id/dieticianButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@color/buttonColor"
        android:textColor="@color/buttonTextColor"
        android:text="@string/dieticianButton" />

    <Button
        android:id="@+id/customerButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@color/buttonColor"
        android:textColor="@color/buttonTextColor"
        android:text="@string/buttonCustomerText" />

    <Button
        android:id="@+id/chefButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@color/buttonColor"
        android:textColor="@color/buttonTextColor"
        android:text="@string/chefButtonText" />

    <Button
        android:id="@+id/waiterButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@color/buttonColor"
        android:textColor="@color/buttonTextColor"
        android:text="@string/waiterButtonText" />

</LinearLayout>