<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.GetOrdersToDeliverActivity">

        <TextView
            android:id="@+id/tVOrdersToDeliverTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tVPreparedOrdersText"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tVOrdersToDeliver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tVTypeOrderToDeliverNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tVOrderToPrepareIdText" />

        <EditText
            android:id="@+id/eTOrderToDeliverId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="" />

        <Button
            android:id="@+id/buttonDeliverOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonDeliverOrderText" />

        <Button
            android:id="@+id/buttonRefreshOrdersToDeliverList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonRefreshOrdersToDeliverText" />

    </LinearLayout>

</ScrollView>