<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DieticianViewActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/backgroundColor">

    <Button
        android:id="@+id/addDishCategoryButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/addDishCategoryButton"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@color/buttonColor"
        android:textColor="@color/buttonTextColor"/>

    <Button
        android:id="@+id/addDishButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/addNewDishText"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@color/buttonColor"
        android:textColor="@color/buttonTextColor"/>

    <Button
        android:id="@+id/getAllDishesButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_gravity="center"
        android:text="@string/showAllDishesText"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@color/buttonColor"
        android:textColor="@color/buttonTextColor"/>

    <Button
        android:id="@+id/getAllDishCategoriesButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/showAllDishCategoriesText"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@color/buttonColor"
        android:textColor="@color/buttonTextColor"/>

    <!--<android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.widget.NestedScrollView>
    -->
</LinearLayout>