<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.AddDishCategoryActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/textViewDishCategoryName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/buttonTextColor"
        android:text="@string/tvDishCategoryName" />

    <EditText
        android:id="@+id/editTextDishCategoryName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_vertical"
        android:inputType="textPersonName"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/eTDishCategoryName" />

    <Button
        android:id="@+id/buttonAddDishCategory"
        android:text="@string/buttonAddDishCategory"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@color/buttonColor"
        android:textColor="@color/buttonTextColor"/>

</LinearLayout>